--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "nodemailer": "^6.10.0",
-    "puppeteer": "^24.4.0"
+    "puppeteer": "~17.1.3"
   }
 }
